add verify code feature